@@ -159,6 +159,16 @@
 #' @param npts number of quadrature points to be used for plotting features.
 #' Larger values make plots look smoother
 #' @param rot allows rotation of the 3D graphics
+#' @param large a logical, indicating whether the internal collapsed data should be returned, 
+#' or list of internally computed mirt parameters containing the data. If \code{TRUE} a list containing 
+#' the organized data used prior to estimation is returned. This list object can then be passed back into
+#' \code{large} to avoid reorganizing the data in every estimation (useful when the dataset are very large
+#' and computing the tabularized data is computationally burdensome). Therefore, the best strategy for large data
+#' is to always pass the internal data to the estimation function, shown below:
+#' \describe{ 
+#' \item{Compute organized data}{e.g., \code{internaldat <- mirt(Science, 1, large = TRUE)}}
+#' \item{Pass the organized data to all estimation functions}{e.g., \code{mod <- mirt(Science, 1, large = internaldat)}} 
+#' }
 #' @param restype type of residuals to be displayed. Can be either \code{'LD'}
 #' for a local dependence matrix (Chen & Thissen, 1997) or \code{'exp'} for the
 #' expected values for the frequencies of every response pattern
@@ -280,8 +290,8 @@
 #' @usage 
 #' mirt(data, model, itemtype = NULL, guess = 0, upper = 1, SE = FALSE, SE.type = 'SEM', SEtol = .001, pars = NULL, 
 #' constrain = NULL, parprior = NULL, calcNull = TRUE, rotate = 'oblimin', Target = NaN, 
-#' prev.cor = NULL, quadpts = NULL, grsm.block = NULL, rsm.block = NULL, D = 1.702, cl = NULL, verbose = FALSE, 
-#' technical = list(), ...)
+#' prev.cor = NULL, quadpts = NULL, grsm.block = NULL, rsm.block = NULL, D = 1.702, cl = NULL, large = FALSE,
+#' verbose = FALSE, technical = list(), ...)
 #' 
 #' \S4method{summary}{ExploratoryClass}(object, rotate = '', Target = NULL, suppress = 0, digits = 3, 
 #' verbose = TRUE, ...)
@@ -406,7 +416,7 @@
 mirt <- function(data, model, itemtype = NULL, guess = 0, upper = 1, SE = FALSE, SE.type = 'SEM', SEtol = .001,
                  pars = NULL, constrain = NULL, parprior = NULL, calcNull = TRUE, rotate = 'oblimin', 
                  Target = NaN, prev.cor = NULL, quadpts = NULL, grsm.block = NULL, rsm.block = NULL, 
-                 D = 1.702, cl = NULL, verbose = FALSE, technical = list(), ...)
+                 D = 1.702, cl = NULL, large = FALSE, verbose = FALSE, technical = list(), ...)
 {       
     Call <- match.call()    
     mod <- ESTIMATION(data=data, model=model, group=rep('all', nrow(data)), 
@@ -414,7 +424,7 @@ mirt <- function(data, model, itemtype = NULL, guess = 0, upper = 1, SE = FALSE,
                       pars=pars, method = 'EM', constrain=constrain, SE=SE, SEtol=SEtol,
                       parprior=parprior, quadpts=quadpts, rotate=rotate, Target=Target, D=D,
                       rsm.block=rsm.block, technical=technical, verbose=verbose,
-                      calcNull=calcNull, SE.type=SE.type, cl=cl, ...)
+                      calcNull=calcNull, SE.type=SE.type, cl=cl, large=large, ...)
     if(is(mod, 'ExploratoryClass') || is(mod, 'ConfirmatoryClass'))
         mod@Call <- Call
     return(mod)    
