@@ -3,6 +3,9 @@ context('mirtTwo')
 test_that('poly', {
     modp1 <- mirt(Science, 1)
     expect_is(modp1, 'ConfirmatoryClass')          
+    vals <- mirt(Science, 1, large = TRUE)
+    modp1 <- mirt(Science, 1, large = vals)
+    expect_is(modp1, 'ConfirmatoryClass')              
     modp1 <- mirt(Science, 1, SE=TRUE, SE.type = 'SEM')
     expect_is(modp1, 'ConfirmatoryClass')          
     modp2 <- mirt(Science, 2)
