@@ -2,6 +2,10 @@ Changes in mirt 0.6.1
 
 NEW FEATURES
 
+- 'large' option added to estimation functions. Useful when the datasets being analysed are very 
+  large and organizing the data becomes a computationally burdensome task that should be avoided when
+  fitting new models. Also, overall faster handling of datasets  
+
 - plot(), fitted(), and residuals() generic support added for MultipleGroup objects
 
 - CFI and X2 model statistics added, and output now includes fit stats w.r.t. both G2 and X2
